Added professors table

--- a/emotion-reco-api/Dockerfile
+++ b/emotion-reco-api/Dockerfile
@@ -31,5 +31,5 @@ USER app
 # Expose FastAPI port
 EXPOSE 8000
 
-# Run app with uvicorn directly (no poetry run needed since deps are global)
+# Run app with uvicorn
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
