--- a/emotion-reco-web/package.json
+++ b/emotion-reco-web/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router": "^7.8.2"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
