--- a/emotion-reco-web/package.json
+++ b/emotion-reco-web/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
