--- a/emotion-reco-web/package.json
+++ b/emotion-reco-web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
