--- a/emotion-reco-api/pyproject.toml
+++ b/emotion-reco-api/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.16.1"
 django-filter = "^25.1"
 python-dotenv = "^1.1.1"
 django-cors-headers = "^4.8.0"
+djangorestframework-simplejwt = "^5.5.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
